[metadata]
name = attention in cv
version = 0.0.1
author = mohamed-ahmed
author_email = engmohamedelshrbeny@gmail.com
description = Attentation methods using in CV field
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/moh2236945/attention-in-cv
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
python_requires = >=3.8
include_package_data = True

